src/app/shared/components/table/table.component.scss
/*********************************** UI ************************************/
.ui-datatable-header{
    position: absolute;
    top: 0;
    z-index: 99;
    background: white;
}
.ui-datatable-wrapper{
  height:100%;
  position: relative;
}
.ui-datatable-body {
    overflow-x: hidden;
    overflow-y:auto;   
    position: absolute;
    left: 0px;
    right: 0px;
    height: 86% !important;
    bottom: 42px;
    top: 34px;
    border-bottom: 1px solid #e2e6ec;
}

.no-header-table{
  display:none !important;
}
// .photo-profile{
//     display: flex;
//     justify-content: center;
// }

.ui-datatable {
    position: absolute;
    left: 0px;
    right: 0px; 
    top: 0px;
    bottom: 0px;

    tbody tr:nth-child(odd) {
        background-color: #fbfbfb;
        border: 1px solid #e2e6ec;
    }
}

.ui-datatable-header-table { 
    width: 100%; 
    border-collapse: collapse;
   border: 1px solid #e2e6ec;
}

.ui-datatable-header-table tr,
.ui-datatable-header-table tr td{
    display: flex;
}
.ui-datatable-header-cell{
    height: 32px;
    align-items: center;
    padding-left: 11px;
}



.ui-datatable-body-cell { 
    padding: 6px 11px;
    vertical-align: middle;
    font-family: 'Open Sans', sans-serif;
    font-size: 11.5px;
    color: #616c7d;

    
}

.ui-datatable-header-cell span{
    font-family: 'Open Sans', sans-serif;
    font-size: 11.5px;
    color: #77829a;
    font-weight: 700;
}

.ui-datatable-body-empty {
    position: absolute;
    left: 0px;
    right: 0px;
    text-align: center;
    bottom: 50%;
    font-size: 13px;
    color: #4a5879;
}

.ui-datatable-body-table {
  width: 100%;
  border-collapse: collapse;
  border: 1px solid #e2e6ec;
  border-top: 2px solid #e2e6ec;
}

.ui-datatable-body-tbody-2 {
  width: 100%;
  border: none;
  border-top: none;
  border-collapse: inherit;
  background: #fff !important;
  .ui-datatable-body-tbody {
    .ui-datatable-body-row {
      .ui-datatable-body-cell {
        border-right: none !important;
      }
    }
  }
}

.ui-datatable-header-2 {
  display: none;
}

.ui-datatable-body-table-row {
    width: 100%;
    border: 1px solid #e2e6ec;
}
.ui-datatable-body-row:hover {
    background: #fbfbfb;
    cursor: pointer;
}

.ui-datatable-body-row.active {
    background: #e5e8f1;
}

.ui-datatable-body-cell:not(:last-child),
.ui-datatable-header-cell:not(:last-child){
    border-right: 1px solid #e2e6ec;
}
.ui-datatable-footer {
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 36px;
    position: absolute;
}
.ui-datatable-footer-right{
    display: flex;
}

.ui-datatable-footer-wrapper {
    display: flex;
    justify-content: space-between;
}

.ui-datatable-footer-total {
    float: left;
    padding: 0px 8px;
    margin-top: 4px;
    color: #4a5879;
    font-size: 14px;
    font-family: 'Open Sans', sans-serif;
}

.ui-datatable-footer-qty {   
    margin: 0px 3px;
    padding-right: 1.5em !important;

}




//* BAterry
.battery-level {
    border-radius: 4px;
    display: inline-block;
    height: 20px;
    width: 48px;
    margin-top: 10px;
}

.battery-level-body {
    border-radius: 4px;
    text-align: center;
    display: inline-block; 
    width: 50px;
    height: 10px;
    background-color: rgb(176, 178, 181);
    line-height: 18px;
    padding: 0px 3px;
    font-size: 13px;
    color: #3c3c3c;
    text-shadow: 0px 0px 1px #fff;
    position: absolute;
}

.battery-level-charge {
    height: 100%;
    position: absolute;
    border-radius: 3px;
    top: 0px;
    left: 0px;
}

.battery-level-text {
    position: absolute;
    left: 0px;
    right: 0px;
    top: 0px;
    bottom: 0px;
}
/********************************** UI table context menu ***********************************/

.ui-datatable-contextmenu {
    position: fixed;
    z-index: 1;
    margin: 2px 0 0;
    font-size: 14px;
    text-align: left;
    list-style: none;
    background-color: #fff;
    -webkit-background-clip: padding-box;
    background-clip: padding-box;
    -webkit-box-shadow: 1px 1px 6px rgba(51, 51, 51, 0.5);
    box-shadow: 1px 1px 6px rgba(51, 51, 51, 0.5);
}

.ui-datatable-contextmenu-list {
    list-style-type: none;
}

.ui-datatable-contextmenu-item {
    height: 42px;
    line-height: 42px;
    padding: 0 10px;
    /* border-bottom: 1px solid #efefef; */
    width: 100%;
    color: #5a6a84;
    font-size: 13px;
    display: flex;
    align-items: center;
    transition:all 151ms ease;
   
    &:hover{
        background: #8d8e9e;
        color: #fff;
        cursor: pointer;
        span{
            color: #FFFFFF !important; 
        }
    }

}
.ui-datatable-contextmenu-item.disabled {
    background-color: #fff;
    color: #000000 !important;
    &:hover {
        cursor: not-allowed;
        background-color: #eee;
        > span {
            color: #aaaaaa
        }
    }
    > span{
         color: #aaaaaa
    }
}

